<resources>
    <string name="app_name">Application Notes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_add_note">Add note</string>
    <string name="title_delete_note">Delete note</string>
    <string name="title_edit_note">Edit note</string>
    <string name="title_about_app">About program</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="ok">OK</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="question_delete_note">Would you like to delete a note?</string>
    <string name="button_yes">Yes</string>
    <string name="button_edit">OK</string>
</resources>