<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/addNote"
        android:orderInCategory="1"
        android:title="@string/title_add_note"
        app:showAsAction="always" />
    <item
        android:id="@+id/deleteNote"
        android:orderInCategory="2"
        android:title="@string/title_delete_note"
        app:showAsAction="always" />
    <item
        android:id="@+id/editNote"
        android:orderInCategory="3"
        android:title="@string/title_edit_note"
        app:showAsAction="always" />
    <item
        android:id="@+id/favorites"
        android:orderInCategory="3"
        android:title="@string/title_favorites"
        app:showAsAction="always" />
    <item
        android:id="@+id/aboutApp"
        android:orderInCategory="4"
        android:title="@string/title_about_app"
        app:showAsAction="always" />

</menu>